--- a/aplicacionraiz2022postgress/Views/Shared/_Layout.cshtml
+++ b/aplicacionraiz2022postgress/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
 <!-- JavaScript Bundle with Popper -->
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/aplicacionraiz2022postgress.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="../assets/css/theme.min.css">
 </head>
 <body>
     <header>
@@ -123,6 +124,8 @@
     }
 </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script src="../node_modules/inputmask/dist/jquery.inputmask.min.js"></script>
+    <script src="../assets/js/main.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
