--- a/aplicacionraiz2022postgress/Views/Pago/Create.cshtml
+++ b/aplicacionraiz2022postgress/Views/Pago/Create.cshtml
@@ -53,7 +53,7 @@
                   <label asp-for="MontoTotal" class="control-label">Monto Total</label>
                 </div>
                 <div class="col-sm-4">
-                  <input type="look" asp-for="MontoTotal" class="form-control" data-thousands="," data-decimal="." />
+                  <input type="look" asp-for="MontoTotal" class="form-control" data-thousands="," data-decimal="." readonly/>
                 </div>
               </div> 
               <br> 
