agregar bot a la tienda

--- a/aplicacionraiz2022postgress/Views/Shared/_Layout.cshtml
+++ b/aplicacionraiz2022postgress/Views/Shared/_Layout.cshtml
@@ -54,6 +54,20 @@
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
+
+
+            <input type="checkbox" id="check">
+
+            <label class="chat-btn" for="check">
+                <img class="icon-bot" src="/images/bot-icon.png" />
+            </label>
+
+            <div class="wrapper">
+                <iframe style="height: 500px"
+                        src='https://webchat.botframework.com/embed/mueblesbot?s=YbqRxNAB6Io.SmKQ_dD8LvKCm893BytVx0J5DvoI5QMdC-MeHIJJQhw'>
+                </iframe>
+            </div>
+
         </main>
     </div>
 
