--- a/aplicacionraiz2022postgress/wwwroot/css/site.css
+++ b/aplicacionraiz2022postgress/wwwroot/css/site.css
@@ -16,3 +16,115 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.chat-btn {
+    position: absolute;
+    right: 14px;
+    bottom: 30px;
+    cursor: pointer
+}
+
+    .chat-btn .close {
+        display: none
+    }
+
+    .chat-btn i {
+        transition: all 0.9s ease
+    }
+
+#check:checked ~ .chat-btn i {
+    display: block;
+    pointer-events: auto;
+    transform: rotate(180deg)
+}
+
+#check:checked ~ .chat-btn .comment {
+    display: none
+}
+
+.chat-btn i {
+    font-size: 22px;
+    color: #fff !important
+}
+
+.chat-btn {
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+    background-color: blue;
+    color: #fff;
+    font-size: 22px;
+    background-color: #e1d438;
+    color: #fff;
+    vertical-align: middle;
+    font-size: 22px;
+    border: 1px solid #047bd3;
+    position: fixed;
+}
+
+.wrapper {
+    position: fixed;
+    right: 20px;
+    bottom: 100px;
+    width: 350px;
+    height: 510px;
+    background-color: #fff;
+    border-radius: 5px;
+    opacity: 0;
+    transition: all 0.4s;
+    border: 4px solid #d5c82b;
+    box-sizing: border-box;
+}
+
+.wrapper > iframe {
+    width: 100%;
+}
+
+#check:checked ~ .wrapper {
+    opacity: 1;
+}
+
+.header {
+    padding: 13px;
+    background-color: blue;
+    border-radius: 5px 5px 0px 0px;
+    margin-bottom: 10px;
+    color: #fff
+}
+
+.chat-form {
+    padding: 15px
+}
+
+    .chat-form input,
+    textarea,
+    button {
+        margin-bottom: 10px
+    }
+
+    .chat-form textarea {
+        resize: none
+    }
+
+.form-control:focus,
+.btn:focus {
+    box-shadow: none
+}
+
+.btn,
+.btn:focus,
+.btn:hover {
+    background-color: blue;
+    border: blue
+}
+
+#check {
+    display: none !important
+}
+
+.icon-bot {
+    width: 80%;
+}
