--- a/aplicacionraiz2022postgress/Views/Proforma/index.cshtml
+++ b/aplicacionraiz2022postgress/Views/Proforma/index.cshtml
@@ -1,5 +1,6 @@
 @model dynamic;
 @using System.Collections.Generic;
+@using aplicacionraiz2022postgress.Models
 
 @{
     ViewData["Title"] = "Carrito";
