--- a/aplicacionraiz2022postgress/Views/Catalogo/index.cshtml
+++ b/aplicacionraiz2022postgress/Views/Catalogo/index.cshtml
@@ -62,6 +62,7 @@
                       </form>
                   </div>
                   <a class="btn btn-info" asp-action="Details" asp-route-id="@row["id"]">Detalles</a>
+                  <h1>@ViewData["Message"]</h1>
                 </div>
               </div>
             </div>
