--- a/aplicacionraiz2022postgress/Views/Shared/_Layout.cshtml
+++ b/aplicacionraiz2022postgress/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-                    <img class="img-responsive" width="3%" height="3%" src="/images/31.png" alt="/images/31.png"  />
+                    <img class="img-responsive" width="3%" height="3%" src="https://alibaba2022ii9976.blob.core.windows.net/img/31.png" alt="https://alibaba2022ii9976.blob.core.windows.net/img/31.png"  />
                     OLD'S Goods</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -59,7 +59,7 @@
             <input type="checkbox" id="check">
 
             <label class="chat-btn" for="check">
-                <img class="icon-bot" src="/images/bot-icon.png" />
+                <img class="icon-bot" src="https://alibaba2022ii9976.blob.core.windows.net/img/bot-icon.png" />
             </label>
 
             <div class="wrapper">
@@ -93,16 +93,16 @@
         <br>
             <div class="row">
             <div class="col-md-3">
-                <img src='/images/facebook.png' class='imgRedonda' style="height:70px;width:70px"/>
+                <img src='https://alibaba2022ii9976.blob.core.windows.net/img/facebook.png' class='imgRedonda' style="height:70px;width:70px"/>
             </div>
             <div class="col-md-3">
-                <img src='/images/insta.png' class='imgRedonda' style="height:70px;width:70px"/>
+                <img src='https://alibaba2022ii9976.blob.core.windows.net/img/insta.png' class='imgRedonda' style="height:70px;width:70px"/>
             </div>
             <div class="col-md-3">
-                <img src='/images/tik.png' class='imgRedonda' style="height:70px;width:70px"/>
+                <img src='https://alibaba2022ii9976.blob.core.windows.net/img/tik.png' class='imgRedonda' style="height:70px;width:70px"/>
             </div>
             <div class="col-md-3">
-                <img src='/images/twiter.png' class='imgRedonda' style="height:70px;width:70px"/>
+                <img src='https://alibaba2022ii9976.blob.core.windows.net/img/twiter.png' class='imgRedonda' style="height:70px;width:70px"/>
             </div>
         </div>
       </div>
