--- a/aplicacionraiz2022postgress/Views/Catalogo/index.cshtml
+++ b/aplicacionraiz2022postgress/Views/Catalogo/index.cshtml
@@ -47,7 +47,7 @@
                 <div class="card-body">
                   <div class="card-img-actions">
                     <img class="img-responsive" width="250" height="250"
-                       src="@row["ImageName"]" alt="@row["ImageName"]"  />
+                       src="https://alibaba2022ii9976.blob.core.windows.net/img/@row["ImageName"]" alt="@row["ImageName"]"  />
                   </div>
                 </div>
                 <div class="card-body">
