--- a/aplicacionraiz2022postgress/Views/Home/Index.cshtml
+++ b/aplicacionraiz2022postgress/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 </div>
-    <img class="img-responsive" src="/images/imagen.jpg" alt="/images/31.png"  style="max-width: 100%; height: auto;margin:0"/>
+    <img class="img-responsive" src="https://alibaba2022ii9976.blob.core.windows.net/img/imagen.jpg" alt="https://alibaba2022ii9976.blob.core.windows.net/img/31.png"  style="max-width: 100%; height: auto;margin:0"/>
 <br>
 <br>
 <div class="container">
@@ -14,13 +14,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/images/oferta1.webp" class="d-block w-100" alt="..." style="height:450px">
+      <img src="https://alibaba2022ii9976.blob.core.windows.net/img/oferta1.webp" class="d-block w-100" alt="..." style="height:450px">
     </div>
     <div class="carousel-item">
-      <img src="/images/oferta2.jpg" class="d-block w-100" alt="..." style="height:450px">
+      <img src="https://alibaba2022ii9976.blob.core.windows.net/img/oferta2.jpg" class="d-block w-100" alt="..." style="height:450px">
     </div>
     <div class="carousel-item">
-      <img src="/images/oferta3.jfif" class="d-block w-100" alt="..." style="height:450px">
+      <img src="https://alibaba2022ii9976.blob.core.windows.net/img/oferta3.jfif" class="d-block w-100" alt="..." style="height:450px">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -40,7 +40,7 @@
 <div class="row">
     <div class="col-md-3" align="center">
     <a href="">
-    <img src='/images/dormitorio.jpg' class='imgRedonda' style="height:100px;width:100px;;border-radius: 150px;"/>
+    <img src='https://alibaba2022ii9976.blob.core.windows.net/img/dormitorio.jpg' class='imgRedonda' style="height:100px;width:100px;;border-radius: 150px;"/>
     <br>
     DORMITORIO
     </a>
@@ -48,7 +48,7 @@
     </div>
     <div class="col-md-3" align="center">
     <a href="">
-    <img src='/images/escritorio.png' class='imgRedonda' style="height:100px;width:100px;;border-radius: 150px;"/>
+    <img src='https://alibaba2022ii9976.blob.core.windows.net/img/escritorio.png' class='imgRedonda' style="height:100px;width:100px;;border-radius: 150px;"/>
     <br>
     ESCRITORIO        
     </a>
@@ -56,7 +56,7 @@
     </div>
     <div class="col-md-3" align="center">
     <a href="">
-    <img src='/images/salas.jpg' class='imgRedonda' style="height:100px;width:100px;;border-radius: 150px;"/>
+    <img src='https://alibaba2022ii9976.blob.core.windows.net/img/salas.jpg' class='imgRedonda' style="height:100px;width:100px;;border-radius: 150px;"/>
     <br>
     SALAS        
     </a>
@@ -64,7 +64,7 @@
     </div>
     <div class="col-md-3" align="center">
     <a href="">
-    <img src='/images/adornos.jpg' class='imgRedonda' style="height:100px;width:100px;;border-radius: 150px;"/>
+    <img src='https://alibaba2022ii9976.blob.core.windows.net/img/adornos.jpg' class='imgRedonda' style="height:100px;width:100px;;border-radius: 150px;"/>
     <br>
     ADORNOS        
     </a>
