--- a/aplicacionraiz2022postgress/Views/apiCatalogo/Details.cshtml
+++ b/aplicacionraiz2022postgress/Views/apiCatalogo/Details.cshtml
@@ -13,7 +13,7 @@
                   <div class="card-body">
                     <div class="card-img-actions">
                       <img class="img-responsive" width="370" height="350"
-                        src="@row["ImageName"]" alt="@row["ImageName"]"  />
+                        src="https://alibaba2022ii9976.blob.core.windows.net/img/@row["ImageName"]" alt="@row["ImageName"]"  />
                     </div>
                   </div>
                   <div class="card-body">
