--- a/aplicacionraiz2022postgress/Views/Pago/Create.cshtml
+++ b/aplicacionraiz2022postgress/Views/Pago/Create.cshtml
@@ -26,7 +26,7 @@
                   <label asp-for="NumeroTarjeta" class="control-label">Numero de Tarjeta</label>
                 </div>
                 <div class="col-sm-4">
-                  <input asp-for="NumeroTarjeta" class="form-control" placeholder="xxxx-xxxx-xxxx-xxxx" data-inputmask="'mask': '9999-9999-9999-9999'" />
+                  <input asp-for="NumeroTarjeta" type="number" class="form-control" placeholder="xxxx-xxxx-xxxx-xxxx" data-inputmask="'mask': '9999-9999-9999-9999'" />
                 </div>
               </div>       
               <br>       
@@ -44,7 +44,7 @@
                   <label asp-for="Cvv" class="control-label"></label>
                 </div>
                 <div class="col-sm-4">
-                  <input asp-for="Cvv" placeholder="xxx" class="form-control" data-inputmask="'mask': '999', 'placeholder': '999'" />
+                  <input asp-for="Cvv"  type="number" placeholder="xxx" class="form-control" data-inputmask="'mask': '999', 'placeholder': '999'" />
                 </div>
               </div>
               <br>
