catalogo con estado

--- a/aplicacionraiz2022postgress/Views/Catalogo/index.cshtml
+++ b/aplicacionraiz2022postgress/Views/Catalogo/index.cshtml
@@ -32,6 +32,19 @@
               <input type="text" id="Subclase" class="form-control" placeholder="Buscar" aria-label="Subclase" name="Subclase"/>
             </div>
             <p>--------------------------</p>
+            <p>--------------------------</p>
+              <div class="form-group">
+                <label class="control-label">Estado</label>
+                <br>
+                <input type="radio" value="Nuevo" aria-label="Estado" name="Estado">
+                <label  for="html">Nuevo</label><br>
+                <br>
+                <input  type="radio" value="Antiguo" aria-label="Estado" name="Estado">
+                <label  for="html">Antiguo</label><br>
+                <br>
+            </div>
+            <p>--------------------------</p>
+            <p>--------------------------</p>
             <input type="submit" value="Buscar" class="btn btn-primary "/>   
         </form>
 
