--- a/aplicacionraiz2022postgress/Views/Shared/_LoginPartial.cshtml
+++ b/aplicacionraiz2022postgress/Views/Shared/_LoginPartial.cshtml
@@ -8,11 +8,12 @@
     <li class="nav-item">
         <a  class="nav-link text-dark" asp-area=""  asp-controller="Proforma" asp-action="Index"><b>Carrito</b></a>
     </li>
-    <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area=""  asp-controller="Descripcion" asp-action="Index"><b>Descripcion</b></a>
-    </li>
-    <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hola @User.Identity?.Name!</a>
+    
+    <li class="nav-item Usuario">
+        <a  class="nav-link text-dark " asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hola @User.Identity?.Name!</a>
+        
+        <a  class="nav-link text-dark Descripcion" asp-area=""  asp-controller="Descripcion" asp-action="Index"><b>Descripcion</b></a>
+        
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
