Descripcion Usuario CSS

--- a/aplicacionraiz2022postgress/Views/Descripcion/index.cshtml
+++ b/aplicacionraiz2022postgress/Views/Descripcion/index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Descripcion De Usuario";
 }
 
-<h1>Descripcion de Usuario</h1>
+<h1 style='color:#047bd3'>Datos del perfil de usuario</h1>
 
 <table class="table">
     <thead>
