--- a/aplicacionraiz2022postgress/Views/Descripcion/index.cshtml
+++ b/aplicacionraiz2022postgress/Views/Descripcion/index.cshtml
@@ -6,7 +6,7 @@
 
 <h1 style='color:#047bd3'>Datos del perfil de usuario</h1>
 
-<table class="table">
+<table class="table1">
     <thead>
         <tr>
             <th>
