--- a/aplicacionraiz2022postgress/wwwroot/css/site.css
+++ b/aplicacionraiz2022postgress/wwwroot/css/site.css
@@ -135,8 +135,13 @@ body {
     opacity: 0;
     text-align: right;
 }
+.active123{
+    height: inherit;
+    width: 200px;
+    opacity: 1;
+}
 
-.table{
+.table1{
     margin-top: 40px;
     color:#047bd3;
     width: 100%;
@@ -145,14 +150,14 @@ body {
     text-align: center;
     
 }
-.table thead, .table tbody{
+.table1 thead, .table1 tbody{
     background-color: #076bf774;
     border-radius: 20px;
 }
-.table thead th{
+.table1 thead th{
     padding: 20px 30px ;
 }
-.table tbody td{
+.table1 tbody td{
     padding: 30px 30px;
     letter-spacing: 1.1px;
     font-size: 15px;
@@ -160,6 +165,6 @@ body {
     cursor: pointer;
     transition: all .3s;
 }
-.table tbody td:hover{
+.table1 tbody td:hover{
     background-color: #da991880;
 }
